Working PTS System

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
-  "TemplateESM": {
-    "title": "Template Svelte (ESM)"
+  "PTS": {
+    "MentalSave": "Mental Save",
+    "mental": "Mental"
   }
 }
