Edit the sheets to match the Exd6 Messenger module

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,7 @@
 {
   "PTS": {
     "MentalSave": "Mental Save",
-    "mental": "Mental"
+    "mental": "Mental",
+    "MiniSheet": "Mini Sheet"
   }
 }
